--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "analyze": "size-limit --why",
     "prettier": "prettier --write \"**/*.{ts,tsx,js,json,css,yml,md}\"",
     "generate-types": "typechain --out-dir 'src/contracts' --target=ethers-v5 'src/abis/**/*.json'",
-    "typecheck": "tsc --pretty --noEmit"
+    "typecheck": "tsc --pretty --noEmit",
+    "test:unit": "hardhat test test/**/*.unit.ts --tsconfig tsconfig-hardhat.json "
   },
   "peerDependencies": {},
   "husky": {
@@ -48,13 +49,22 @@
     }
   ],
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@size-limit/preset-small-lib": "7.0.5",
     "@typechain/ethers-v5": "^9.0.0",
+    "@types/chai": "^4.3.0",
     "@types/lodash": "^4.14.178",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.15",
     "@types/uuid": "^8.3.4",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "hardhat": "^2.8.3",
     "husky": "^7.0.2",
     "prettier": "^2.5.1",
     "size-limit": "7.0.5",
+    "ts-node": "^10.4.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typechain": "^7.0.0",
@@ -71,6 +81,7 @@
     "date-fns": "^2.28.0",
     "ethers": "^5.5.4",
     "from-exponential": "^1.1.1",
+    "hardhat-jest-plugin": "^0.0.6",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "tiny-invariant": "^1.2.0",
